--- a/src/styles/fightgame.css
+++ b/src/styles/fightgame.css
@@ -1,24 +1,29 @@
 
 .fight-game h1{
+  position: relative;
+  top: 100px;
  text-align: center;
  color:chocolate;
+ font-size: 40px;
 }
 .fight-game{
   align-content: center;
 }
 
 .player-1 , .player-2{
-  float: left;
+  float: left; 
   position: relative; 
-  left: 12%;
+  left: 18%;
   margin-right: 55px; 
 }
   .fight-game p{
-    font-size: 20px;
+    position: relative;
+    font-size: 25px;
+    font-weight: bold;
     color:chocolate;
     margin-left:10px;
     width: 200px;
-    
+    top: 180px;
   }
 
   .player-1 p , .player-2 p{
@@ -26,16 +31,37 @@
   }
 
 .player-1 img , .player-2 img{
+  position: relative;
+  top:220px;
   width: 400px;
   height: 400px;
-  border: 1px solid #eee;
-  border-radius: 25px;
- box-shadow: 2px 2px #eee;
+
+}
+#player2-click:active , #player1-click:active {
+  width:170px;
+  height:174px;
+}
+/* 
+/* /* #player2-click:active{
+  -webkit-animation: mymove 5s infinite; 
+  animation: mymove 5s infinite; 
+} 
+
+/* @-webkit-keyframes mymove {
+  from {left: 0px;}
+  to {left: 200px;}
 }
 
+@keyframes mymove {
+  from {left: 0px;}
+  to {left: 200px;}
+} */
 .progress {
+  position: relative;
+  top: 170px;
   display: flex;
   height: 1.5rem;
+  width: 350px;
   overflow: hidden;
   font-size: 0.75rem;
   background-color: #e9ecef;
