--- a/src/styles/fightgame.css
+++ b/src/styles/fightgame.css
@@ -1,10 +1,10 @@
 
 .fight-game h1{
   position: relative;
-  top: 100px;
+  top: 50px;
  text-align: center;
  color:chocolate;
- font-size: 40px;
+ font-size:40px;
 }
 .fight-game{
   align-content: center;
@@ -16,6 +16,12 @@
   left: 18%;
   margin-right: 55px; 
 }
+
+
+
+#player-img{
+  background-color: transparent;
+}
   .fight-game p{
     position: relative;
     font-size: 25px;
@@ -23,8 +29,14 @@
     color:chocolate;
     margin-left:10px;
     width: 200px;
-    top: 180px;
+    top: 80px;
+    background-color: #f2f2f2;
+    border-radius:20px;
+    opacity: 0.8;
+    text-align: center;
   }
+
+ 
 
   .player-1 p , .player-2 p{
     opacity: 0.9;
@@ -32,7 +44,7 @@
 
 .player-1 img , .player-2 img{
   position: relative;
-  top:220px;
+  top:200px;
   width: 400px;
   height: 400px;
 
@@ -41,24 +53,9 @@
   width:170px;
   height:174px;
 }
-/* 
-/* /* #player2-click:active{
-  -webkit-animation: mymove 5s infinite; 
-  animation: mymove 5s infinite; 
-} 
-
-/* @-webkit-keyframes mymove {
-  from {left: 0px;}
-  to {left: 200px;}
-}
-
-@keyframes mymove {
-  from {left: 0px;}
-  to {left: 200px;}
-} */
 .progress {
   position: relative;
-  top: 170px;
+  top: 80px;
   display: flex;
   height: 1.5rem;
   width: 350px;
