--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -13,11 +13,15 @@
   text-align: center;
   margin-top: 15px;
 }
-.signup h1 , .login h1{ 
+.signup h2 , .login h2{ 
   text-align: center;
   margin: 35px;
 }
-
+#msg{
+  color:chocolate;
+  position: relative;
+  top: 80px;
+}
 .signup input , .login input{
     padding:10px;
     border-radius: 20px;
